--- a/Ruby on Rails/my_first_rails_app/Gemfile
+++ b/Ruby on Rails/my_first_rails_app/Gemfile
@@ -4,13 +4,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby '2.7.4'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails', branch: 'main'
-group :development, :test do
- gem 'sqlite3'
-end
-
-group :production do
-  gem 'pg'
-end
+gem 'rails', '~> 6.1.4'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.4'
 # Use Puma as the app server
