--- a/Ruby on Rails/my_first_rails_app/Gemfile
+++ b/Ruby on Rails/my_first_rails_app/Gemfile
@@ -7,11 +7,11 @@ ruby '2.7.4'
 gem 'rails', '~> 6.1.4'
 # Use sqlite3 as the database for Active Record
 group :development, :test do
- gem 'sqlite3'
+ gem 'pq'
 end
 
 group :production do
-  gem 'pg'
+  gem 'pq'
 end
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
