--- a/Ruby on Rails/my_first_rails_app/Gemfile
+++ b/Ruby on Rails/my_first_rails_app/Gemfile
@@ -6,12 +6,12 @@ ruby '2.7.4'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails', branch: 'main'
 gem 'rails', '~> 6.1.4'
 # Use sqlite3 as the database for Active Record
-group :development, :test do
- gem 'sqlite3'
+group :production do
+  gem "pg"
 end
 
-group :production do
-  gem 'pg'
+group :development, :test do
+  gem "sqlite3"
 end
 
 # Use Puma as the app server
