--- a/Ruby on Rails/Project: Blog App/blog/Gemfile
+++ b/Ruby on Rails/Project: Blog App/blog/Gemfile
@@ -7,7 +7,15 @@ ruby '2.7.4'
 gem 'rails', '~> 6.1.4', '>= 6.1.4.4'
 # Use sqlite3 as the database for Active Record
 # gem 'sqlite3', '~> 1.4'
-gem 'pg'
+
+group :development, :test do
+ gem 'sqlite3'
+end
+
+group :production do
+  gem 'pg'
+end
+
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
 # Use SCSS for stylesheets
