--- a/Ruby on Rails/Project: Blog App/blog/Gemfile
+++ b/Ruby on Rails/Project: Blog App/blog/Gemfile
@@ -13,7 +13,7 @@ group :production do
 end
 
 group :development, :test do
- gem 'sqlite3', '~> 1.4'
+ gem 'sqlite3'
 end
 
 # Use Puma as the app server
