--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/.gitignore
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/.gitignore
@@ -30,6 +30,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore .env
 .env
 
-/initializers/devise.rb
+# Ignore Devise
+/config/initializers/devise.rb
