--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/Gemfile
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/Gemfile
@@ -77,3 +77,6 @@ gem "bulma-rails", "~> 0.9.3"
 # OmniAuth
 gem 'omniauth-facebook'
 gem 'omniauth-rails_csrf_protection'
+
+#letter_opener
+gem "letter_opener", group: :development
