--- a/JavaScript/Project - Battlehip/package.json
+++ b/JavaScript/Project - Battlehip/package.json
@@ -1,12 +1,23 @@
 {
-  "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "babel-jest": "^29.6.1",
-    "jest": "^29.6.1"
-  },
+  "name": "project---battlehip",
+  "version": "1.0.0",
+  "description": "",
+  "private": "true",
   "scripts": {
-    "test": "jest",
-    "watch": "jest --watch *.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "build": "webpack"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
