--- a/JavaScript/Project - Battlehip/package.json
+++ b/JavaScript/Project - Battlehip/package.json
@@ -17,11 +17,13 @@
     "@babel/preset-env": "^7.22.9",
     "babel-jest": "^29.6.1",
     "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^5.5.3"
   }
 }
