--- a/React/Project - Shopping Cart/shopping-cart/package.json
+++ b/React/Project - Shopping Cart/shopping-cart/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
