--- a/React/Project - Messaging App/messaging_app/.gitignore
+++ b/React/Project - Messaging App/messaging_app/.gitignore
@@ -32,4 +32,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-config/initializers/devise.rb
+# Ignore secret key devise
+/config/initializers/devise.rb
