--- a/React/Project - Messaging App/messaging_app/.gitignore
+++ b/React/Project - Messaging App/messaging_app/.gitignore
@@ -29,8 +29,12 @@
 !/tmp/storage/
 !/tmp/storage/.keep
 
+/public/assets
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-# Ignore secret key devise
-/config/initializers/devise.rb
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
